--- a/.github/workflows/django_ci.yml
+++ b/.github/workflows/django_ci.yml
@@ -1,4 +1,4 @@
-name: Django CI
+name: Django CI/CD
 
 on:
   push:
@@ -7,25 +7,47 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
+  build_and_test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-
     - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Run Migrations
-      run: python manage.py migrate
-
+      run: pip install -r requirements.txt
     - name: Run Tests
       run: python manage.py test
+
+  build_and_push_docker:
+    runs-on: ubuntu-latest
+    needs: build_and_test
+    steps:
+    - uses: actions/checkout@v2
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: mrp0p
+        password: ${{ secrets.DOCKER_PASS }}
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: mrp0p/litrevu:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_docker
+    steps:
+    - name: Deploy to EC2
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ubuntu
+        key: MON_SRV
+        script: |
+          docker pull mrp0p/litrevu:latest
+          docker-compose down
+          docker-compose up -d
