--- a/.github/workflows/django_ci.yml
+++ b/.github/workflows/django_ci.yml
@@ -48,6 +48,6 @@ jobs:
         username: ubuntu
         key: ${{ secrets.MON_SRV }}
         script: |
-          docker pull mrp0p/litrevu:latest
-          docker-compose down
-          docker-compose up -d
+          sudo docker pull mrp0p/litrevu:latest
+          sudo docker-compose down
+          sudo docker-compose up -d
