erreur de config cd

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -51,4 +51,4 @@ jobs:
           sudo docker pull mrp0p/litrevu:latest
           sudo docker stop litrevu || true
           sudo docker rm litrevu || true
-          sudo docker run --name litrevu -d -p 8000:8000 mrp0p/lettings:latest
+          sudo docker run --name litrevu -d -p 8000:8000 mrp0p/litrevu:latest
